Fixed bootstrap for sign up form and footer for content to render properly on smaller screens

--- a/radio/css/radio.css
+++ b/radio/css/radio.css
@@ -10,11 +10,14 @@ a
 
 #header 
 {
-    background-image: url(../images/Radio-Hero.jpg);
+    background-image: url(../images/Radio-Images.png);
+    background-repeat:no-repeat !important;
+    -webkit-background-size:cover !important;
+    -moz-background-size:cover !important;
+    -o-background-size:cover !important;
+    background-size:cover !important;
+    background-position:center !important;
     padding: 20px 10px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
     height: 325px;
 }
 
@@ -118,10 +121,13 @@ a
 #footer
 {
     background-image: url(../images/Footer.png);
-    padding: 20px 10px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height:480px;
+    background-repeat:no-repeat !important;
+    -webkit-background-size:cover !important;
+    -moz-background-size:cover !important;
+    -o-background-size:cover !important;
+    background-size:cover !important;
+    background-position:center !important;
+    height:auto;
 }
 
 #footer-lhs
@@ -159,8 +165,6 @@ a
     font-size: 18px;
     text-align: left;
     margin-bottom: 30px;
-    margin-left: 20px;
-
     border-style: solid;
     border-color: white;
     
